--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,15 @@ body {
   justify-content: center;
 }
 
+.title {
+  margin: 0;
+  transition: all 0.4s ease-in-out;
+  text-align: center;
+  color: white;
+  padding: 1.5rem;
+  background-color: black;
+}
+
 #container {
   height: 100%;
   display: flex;
@@ -26,6 +35,8 @@ body {
   color: white;
   display: flex;
   justify-content: center;
+  padding: 1rem;
+  margin-top: 2rem;
   
 }
 
